--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <resources>
     <string name="app_name">Setting Sun</string>
 
-    <string name="score">Score:</string>
-    <string name="highscore">High Score:</string>
-
+    <string name="score">Score</string>
+    <string name="highscore">High score</string>
 
     <string name="action_settings">Settings</string>
 </resources>
