--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Setting Sun</string>
 
-    <string name="score">Score</string>
+    <string name="score">Moves</string>
     <string name="highscore">High score</string>
     <string name="back">Back to last position</string>
     <string name="restart">Restart game</string>
